--- a/CP(Cine Plus)/Principal/Principal.css
+++ b/CP(Cine Plus)/Principal/Principal.css
@@ -48,9 +48,9 @@
     margin-right: 20px; /* Agrega espacio a la derecha del logo */
 }
 
-body {
+/* body {
     margin: 0;
-}
+} */
 
 /* Estilos para los elementos de la lista de navegación */
 .BarraNav nav ul li a {
