--- a/CP(Cine Plus)/Principal/Principal.css
+++ b/CP(Cine Plus)/Principal/Principal.css
@@ -71,3 +71,6 @@ body {
 .BarraNav nav ul li a:active {
     transform: translateY(3px); /* Mueve ligeramente hacia abajo */
 }
+
+
+/* que bueno que esta quedando el cp*/
