Botón Hamburguesa para despliegue de menu en baja resolución Implementado al 100

--- a/CP(Cine Plus)/src/Components/Shared/BarraNavegacion.css
+++ b/CP(Cine Plus)/src/Components/Shared/BarraNavegacion.css
@@ -3,13 +3,14 @@
 .BarraNav {
     background-color: #000915; 
     text-align: center;
-    padding-left: 10px; 
-    padding-right: 10px;
+    padding-left: 20px; 
+    padding-right: 20px;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
+    box-sizing: border-box;
 }
 
 /* Estilos para la lista de navegación dentro de la barra */
@@ -51,7 +52,6 @@
     font-size: 20px;    
     color: #ffffff; 
     text-decoration: none; 
-    padding: 10px 20px; 
     transition: transform 0.3s ease; 
     white-space: nowrap;    
 }
@@ -65,11 +65,14 @@
 
 .linksContainer {
     display: flex;
-    justify-content: center;
+    flex-grow: 1;
+    min-width: 500px;
+    max-width: 800px;
+    justify-content: space-between;
   }
 
 /* Estilos para el logo en la barra de navegación */
-.BarraNav img {
+.logo {
     height: 50px; /* Ajusta la altura del logo */
     margin-right: 20px; /* Agrega espacio a la derecha del logo */
 }
@@ -85,32 +88,89 @@
     transform: translateY(3px); /* Mueve ligeramente hacia abajo */
 }
 
-.toggleButton {
+
+.buttonContainer {
     display: none;
+    box-sizing: border-box;
+    width: 50px;
+    height: 50px;
+    flex-shrink: 0;
 }
 
-.menuDesplegable {
+.btnHamburguesa {
+    width: 100%;
+    padding-block: 0px;
+    padding-inline: 0px;
+    background-color:#002657;
+}
+.imgHamburgesa {
     display: none;
+    width: 100%;
+    margin: 0%;
 }
 
-.menuDesplegable {
-    display: flexbox;
+.menuDesplegableInvisible {
+    display: none;
 }
+.menuDesplegableVisible {
+    display: none; /* Hace que el menu desplegable no aparezca cuando la página tenga mas de 670px */
+    background-color: #c4e2ff;
+    border-radius: 10px;
+    padding: 10px 0 10px 0;
+    z-index: 1000;
+}
+.menuDesplegableVisible a {
+    text-decoration: none;
+    color: #000915;
+    transition: all 0.3s ease;
+    white-space: nowrap;
+}
+
+.menuDesplegableVisible a:hover {
+    transform: translateY(-3px);
+}
+
+.itemMenuDesplegable {
+    padding: 0 20px 0 20px;
+    width: 200px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+
+.itemMenuDesplegable:hover {
+    background-color: #b9d0f1;
+
+}
+
 /* que bueno que esta quedando el cp*/
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 670px) {
     .linksContainer {
         display: none;
     }
-    .toggleButton {
+
+    .buttonContainer {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .imgHamburgesa {
         display: block;
         cursor: pointer;
         transition: all 0.3s ease;
     }
-    .toggleButton:hover {
-        transform: scale(1.1);
+    .imgHamburgesa:hover {
+        transform: scale(1.05);
     }
-    .toggleButton:active {
-        transform: scale(0.9);
+    .imgHamburgesa:active {
+        transform: scale(0.95);
+    }
+    .menuDesplegableVisible{
+        display: flex; 
+        position: fixed;
+        flex-direction: column;
+        right: 15px;
     }
 }
