--- a/CP(Cine Plus)/src/Pages/Index/App.css
+++ b/CP(Cine Plus)/src/Pages/Index/App.css
@@ -1,6 +1,15 @@
 body {
     
     margin: 0;
-    margin-top: 150px;
+    margin-top: 100px;
     background-color: #B5C7D8;
 }
+
+button {
+    border-radius: 8px;
+    border: 1px solid transparent;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
+  }
