--- a/CP(Cine Plus)/src/Components/Shared/BarraNavegacion.css
+++ b/CP(Cine Plus)/src/Components/Shared/BarraNavegacion.css
@@ -5,7 +5,7 @@
     text-align: center;
     padding-left: 20px; 
     padding-right: 20px;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
