Se añade border radius a las imagenes

--- a/CP(Cine Plus)/src/Pages/Principal/Carrusel/Carrusel.css
+++ b/CP(Cine Plus)/src/Pages/Principal/Carrusel/Carrusel.css
@@ -12,10 +12,12 @@
     aspect-ratio: 5 / 9;
     width: 360px;
     transition: all 0.3s ease;
+    border-radius: 10px;
 }
 
 .CarruselMovieImg:hover {
     width: 400px;
+    border-radius: 30px;
 }
 
 @media screen and (max-width: 1340px) {
