--- a/CP(Cine Plus)/src/Pages/Principal/Carrusel/Carrusel.css
+++ b/CP(Cine Plus)/src/Pages/Principal/Carrusel/Carrusel.css
@@ -1,26 +1,40 @@
+a{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .CarruselContainer{
     width: 100%;
-    height: 900px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #021438;
+    height: 40vw;
+    flex-shrink: 1;
+}
+
+.CarruselMovie{
+    height: 100%;
+    width: 100%;
 }
 
 
 .CarruselMovieImg {
-    aspect-ratio: 5 / 9;
-    width: 360px;
+    width: 90%;
+    height: 80%;
     transition: all 0.3s ease;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .CarruselMovieImg:hover {
-    width: 400px;
-    border-radius: 30px;
+    height: 90%;
+    width: 100%;
 }
 
-@media screen and (max-width: 1340px) {
+@media screen and (max-width: 1080px) {
     .CarruselContainer div:first-child{
         display: none;
     }
@@ -29,7 +43,7 @@
     }
 }
 
-@media screen and (max-width: 1040px) {
+@media screen and (max-width: 610px) {
     .CarruselContainer {
         display: none;
     }
