--- a/CP(Cine Plus)/src/Components/Shared/CarritoCompras/Car.css
+++ b/CP(Cine Plus)/src/Components/Shared/CarritoCompras/Car.css
@@ -117,11 +117,11 @@ img {
 }
 
 /* Main */
-.container-items {
+/* .container-items {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 20px;
-}
+} */
 
 .item {
 	border-radius: 10px;
