--- a/CP(Cine Plus)/src/Components/Shared/CarritoCompras/Car.css
+++ b/CP(Cine Plus)/src/Components/Shared/CarritoCompras/Car.css
@@ -1,12 +1,17 @@
 /* Globales */
 *::after,
 *::before,
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 
 
 .icon-cart {
 	width: 40px;
 	height: 40px;
-	stroke: #000;
+	stroke: #ffffff;
 }
 
 .icon-cart:hover {
@@ -17,6 +22,12 @@ img {
 	max-width: 100%;
 }
 
+/* Header */
+header {
+	display: flex;
+	justify-content: space-between;
+	padding: 30px 0 40px 0;
+}
 
 .container-icon {
 	position: relative;
@@ -117,11 +128,11 @@ img {
 }
 
 /* Main */
-/* .container-items {
+.container-items {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 20px;
-} */
+}
 
 .item {
 	border-radius: 10px;
