--- a/CP(Cine Plus)/src/Pages/Login/Login.css
+++ b/CP(Cine Plus)/src/Pages/Login/Login.css
@@ -17,7 +17,9 @@
     width: 400px;
     background: #fff;
     border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1); 
+    padding: 30px 40px;
+    box-shadow: 0 0 10px rgba(0,0,0, .1);
 }
 
 .wrapperLogin h1{
@@ -26,3 +28,87 @@
     text-align: center;
     line-height: 100px;
 }
+
+.wrapperLogin .input-box{
+
+    width: 100%;
+    height: 40px;
+    margin:30px 0;
+    position: relative;
+}
+
+.input-box input{
+    width: 100%;
+    height: 100%;
+    border:none;
+    outline:none;
+    border: 1px solid rgba(0, 0,0,.2);
+    border-radius: 35px;
+    padding: 20px 45px 20px 20px;
+    font-size: 14px;
+}
+
+.input-box box-icon{
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+.wrapperLogin .remember-forgot{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: -15px 0 15px 0;
+}
+
+.remember-forgot label input{
+    accent-color: #03a9f4;
+    margin-right: 10px;
+}
+
+.remember-forgot a{
+    text-decoration: none;
+    color: #000;
+
+}
+
+.remember-forgot a:hover{
+    text-decoration: underline;
+    color:#03a9f4;
+}
+
+.wrapperLogin .btnLogin{
+    width: 100%;
+    height: 40px;
+    border:none;
+    outline: none;
+    border-radius: 35px;
+    background-color: #03a9f4;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    margin: 10px 0 20px 0;
+}
+
+.wrapperLogin .btnLogin:hover{
+    background-color: #0065f2;
+    transition: all 0.3s ease;
+}
+
+
+.wrapperLogin .register{
+    font-size: 15px;
+    text-align: center;
+
+}
+
+.wrapperLogin .register p a{
+    text-decoration: none;
+    color: #03a9f4;
+    margin-left: 10px;
+}
+
+
+
