--- a/CP(Cine Plus)/src/Pages/Pelicula_info/Descripcion/Descripcion.css
+++ b/CP(Cine Plus)/src/Pages/Pelicula_info/Descripcion/Descripcion.css
@@ -31,9 +31,10 @@
 .CalendarioContainer{
     width: 50%;
     box-sizing: border-box;
-    margin-top: 10vw;
+    margin-top: 0;
     display: flex;
-    align-items: flex-end;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .InfoContainer{
@@ -49,4 +50,11 @@
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.TrailerContainer{
+    border-color: brown;
+    border-style: solid;
+    width: 100%;
+    height: 25%;
 }
