--- a/CP(Cine Plus)/src/Pages/Login/Login.css
+++ b/CP(Cine Plus)/src/Pages/Login/Login.css
@@ -106,6 +106,24 @@
 
 }
 
+.loginErrorContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+
+    margin: 10px 0;
+}
+
+.loginErrorContainer p{
+    color: red;
+    margin: 0;
+    margin-left: 5px;
+    padding: 0;
+}
+
+
+
 .wrapperLogin .register p a{
     text-decoration: none;
     color: #063c83;
