--- a/CP(Cine Plus)/src/Pages/Pelicula_info/Descripcion/Descripcion.css
+++ b/CP(Cine Plus)/src/Pages/Pelicula_info/Descripcion/Descripcion.css
@@ -1,34 +1,47 @@
-.DescriptionContainer{
+.DescriptionContainer {
     width: 50%;
     box-sizing: border-box;
     padding-right: 7.4%;
     margin-top: 10vw;
 }
 
-.DescriptionContainer p{
+.DescriptionContainer p {
     font-size: 1.1vw;
     font-family: MuseoModerno, sans-serif;
 }
 
-.DescriptionContainer h6{
+.DescriptionContainer h6 {
     font-size: 1.3vw;
     font-family: MuseoModerno, sans-serif;
     font-weight: normal;
-    margin-bottom : 10px;
+    margin-bottom: 10px;
     margin-top: 0;
 }
 
-.DescriptionContainer h3{
+.DescriptionContainer h3 {
     color: rgb(0, 26, 91);
 }
 
-.DescriptionContainer h4{
+.DescriptionContainer h4 {
     color: rgb(0, 26, 91);
     margin: 0;
 }
 
+.ReservaButton {
+    display: inline-block;
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 20px;
+}
 
-.CalendarioContainer{
+.ReservaButton:hover {
+    background-color: #0056b3;
+}
+
+.CalendarioContainer {
     width: 50%;
     box-sizing: border-box;
     margin-top: 0;
@@ -37,22 +50,23 @@
     flex-wrap: wrap;
 }
 
-.InfoContainer{
+.InfoContainer {
     width: 72%;
     background-color: aliceblue;
     margin-top: 6vw;
-    padding: 2%;   
+    padding: 2%;
     box-sizing: border-box;
     border-radius: 2vw;
     display: flex;
 }
-.MayorContainer{
+
+.MayorContainer {
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-.TrailerContainer{
+.TrailerContainer {
     border-color: brown;
     border-style: solid;
     width: 100%;
