Arreglos en el css

--- a/CP(Cine Plus)/src/Components/Shared/BarraNavegacion/BarraNavegacion.css
+++ b/CP(Cine Plus)/src/Components/Shared/BarraNavegacion/BarraNavegacion.css
@@ -161,7 +161,7 @@
     right: 15px;
     background-color: #c4e2ff;
     border-radius: 10px;
-    padding: 10px 0 10px 0;
+    padding: 10px 20px 10px 20px;
     z-index: 1000;
 }
 .menuDesplegableVisible a {
