--- a/CP(Cine Plus)/src/Components/Shared/BarraNavegacion/BarraNavegacion.css
+++ b/CP(Cine Plus)/src/Components/Shared/BarraNavegacion/BarraNavegacion.css
@@ -37,6 +37,7 @@
     margin: 0 45px; /* Ajusta el margen horizontal */
 }
 
+
 .BarraNav nav ul li:last-child {
     margin-right: 0; /* Elimina el margen derecho del último elemento */
 }
@@ -211,6 +212,9 @@
 
 @media screen and (max-width: 600px) {
     .linksContainer {
+        display: none;
+    }
+    .menuPerfilDesplegableVisible {
         display: none;
     }
 
