--- a/CP(Cine Plus)/src/Components/Shared/CarritoCompras/Car.css
+++ b/CP(Cine Plus)/src/Components/Shared/CarritoCompras/Car.css
@@ -127,35 +127,41 @@ header {
 	display: none;
 }
 
+
 /* Main */
 .container-items {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
+	background-color: #c4e2ff;	;
 	gap: 20px;
+	padding: 20px;
 }
-
 .item {
 	border-radius: 10px;
+	background-color: #f1f8ff;
+	box-sizing: border-box;
 }
 
 .item:hover {
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
+
 .item img {
+	aspect-ratio: 1 / 1;
 	width: 100%;
-	height: 300px;
 	object-fit: cover;
-	border-radius: 10px 10px 0 0;
+	border-radius: 10px;
 	transition: all 0.5s;
 }
 
 .item figure {
 	overflow: hidden;
+	margin: 10px;
 }
 
 .item:hover img {
-	transform: scale(1.2);
+	transform: scale(1.1);
 }
 
 .info-product {
@@ -208,4 +214,16 @@ header {
   background-color:  #08174f;
   transform: scale(1.03);
   border-radius: 10px;
+}
+
+@media screen and (max-width: 632px) {
+	.container-items {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.container-items {
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
