--- a/CP(Cine Plus)/src/Pages/Pelicula_info/Descripcion/Descripcion.css
+++ b/CP(Cine Plus)/src/Pages/Pelicula_info/Descripcion/Descripcion.css
@@ -43,6 +43,7 @@
 
 .CalendarioContainer {
     width: 50%;
+    height: fit-content;
     box-sizing: border-box;
     margin-top: 0;
     display: flex;
@@ -52,6 +53,7 @@
 
 .InfoContainer {
     width: 72%;
+    height: fit-content;
     background-color: aliceblue;
     margin-top: 6vw;
     padding: 2%;
@@ -70,5 +72,49 @@
     border-color: brown;
     border-style: solid;
     width: 100%;
-    height: 25%;
+    height: 200px;
+    margin-bottom: 20px;
 }
+
+.FiltrosContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    height: fit-content;
+}
+
+.button-group {
+    display: flex;
+    gap: 10px; /* Espacio entre los botones */
+}
+.button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    font-size: 1.5vw;
+    font-family: MuseoModerno, sans-serif;
+    transition: background-color 0.3s;
+    transition: all 0.3s ease;
+}
+.nodisponible {
+    background-color: #b1c6d4;
+    cursor: not-allowed;
+}
+.seleccionado{    
+    background-color: #2683cf;
+}
+.noseleccionado {
+    background-color: #072336;
+    cursor: pointer;
+}
+
+.noseleccionado:hover {
+    background-color: #224b66;
+    transform: translateY(-2px);
+}
+
+.noseleccionado:active {
+    transform: translateY(3px);
+}
+
