--- a/CP(Cine Plus)/src/Pages/Pelicula_info/Descripcion/Descripcion.css
+++ b/CP(Cine Plus)/src/Pages/Pelicula_info/Descripcion/Descripcion.css
@@ -74,7 +74,17 @@
     width: 100%;
     height: 200px;
     margin-bottom: 20px;
+    position: relative; 
 }
+
+.YouTubePlayer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 
 .FiltrosContainer {
     width: 100%;
