--- a/CP(Cine Plus)/src/Pages/Pelicula_info/Descripcion/Descripcion.css
+++ b/CP(Cine Plus)/src/Pages/Pelicula_info/Descripcion/Descripcion.css
@@ -69,20 +69,18 @@
 }
 
 .TrailerContainer {
-    border-color: brown;
-    border-style: solid;
     width: 100%;
-    height: 200px;
+    height: auto;
     margin-bottom: 20px;
     position: relative; 
 }
 
 .YouTubePlayer {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 20vw;
 }
 
 
