Implementado Los Filtros Con Calendario También (Dolió y bastante)

--- a/src/Pages/Pelicula_info/Descripcion/Calendario/Calendario.css
+++ b/src/Pages/Pelicula_info/Descripcion/Calendario/Calendario.css
@@ -47,6 +47,11 @@
     margin-bottom: 10px;
 }
 
+.diaNoDisponible{
+    cursor: not-allowed;
+    color: #838383; 
+}
+
 
 .DiasSemana{
     color: rgb(0, 26, 91);
