Botones y portada muchisimo mas responsivos, pagina mi perfil eliminada y actualización menu desplegable

--- a/src/Components/Shared/BarraNavegacion/BarraNavegacion.css
+++ b/src/Components/Shared/BarraNavegacion/BarraNavegacion.css
@@ -192,6 +192,7 @@
     height: 50px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .itemMenuPerfilDesplegable {
