--- a/src/Pages/Reserva/Reserva.css
+++ b/src/Pages/Reserva/Reserva.css
@@ -1,59 +1,99 @@
 .reservation-container {
     display: flex;
+    box-sizing: border-box;
     justify-content: space-between;
     padding: 20px;
     background-color: #021438;
     color: white;
+    flex-wrap: wrap;
+
   }
   
   .seats-container {
-    width: 65%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+    overflow: auto;
   }
   
   .info-container {
-    width: 30%;
+    width: 100%;
+  }
+  .espacio {
+    height: 70px;
+    grid-column-start: 1;
+    grid-column-end: -1;
+  }
+  .espaciov1{
+    width: 40px;
+    grid-column-start: 14;
+    grid-row-start: 3;
+    grid-row-end: -1;
+  }
+  .espaciov2 {
+    width: 40px;
+    grid-column-start: 5;
+    grid-row-start: 3;
+    grid-row-end: -1;
   }
   
-  .container {
+  .sala {
+    box-sizing: border-box;
     perspective: 1000px;
-    margin-bottom: 30px;
+    background-color: #D3DEE8; 
+    border-radius: 20px; 
+    padding: 40px; 
+    display: grid;
+    grid-template-columns: repeat(18, 1fr);
+    grid-template-rows: repeat(2, 1fr)repeat(8, 3vw);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+  }
+  .salaContainer {
+    
+    width: 80%;
   }
   
   .seat {
-    background-color: #444451;
-    height: 20px;
-    width: 30px;
-    margin: 5px;
+    background-image: url("../../assets/Silla.png");
+    background-size: contain; 
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100%;
+    width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+    filter: saturate(0.2) brightness(1) contrast(0) grayscale(1);
+    transition: all 0.3s ease;
   }
 
   .seat.selected {
-    background-color: #6feaf6;
+    filter:  brightness(1);
   }
-
   .seat.occupied {
-    background-color: #fff;
+    filter: brightness(0);
   }
   
   .seat.aisle {
     visibility: hidden;
   }
   
-  .seat:nth-of-type(2) {
-    margin-right: 18px;
-  }
   
-  .seat:nth-last-of-type(2) {
-    margin-left: 18px;
-  }
+  
   
   .seat:not(.occupied):hover {
     cursor: pointer;
-    transform: scale(1.2);
+    transform: scale(1.15);
+  }
+  .seat:not(.occupied):active {
+    cursor: pointer;
+    transform: scale(1.05); 
   }
   
   .text {
@@ -95,16 +135,59 @@
     margin-right: 10px;
   }
 
-  .row {
-    display: flex;
-  }
   
   .screen {
     background-color: #fff;
     height: 70px;
-    width: 100%;
-    margin: 15px 0;
+    width: 90%;
     transform: rotateX(-45deg);
     box-shadow: 0 3px 10px rgba(255, 255, 255, 0.75);
+    grid-column-start: 1;
+    grid-column-end: -1;
   }
     
+  @media screen and (max-width: 1000px) {
+    .salaContainer {
+      width: 80%;
+    }
+    .sala {
+      grid-template-rows: repeat(2, 1fr)repeat(8, 30px);
+      padding: 25px;
+    }
+    
+  }
+  @media screen and (max-width: 840px) {
+    .sala {
+      grid-template-rows: repeat(2, 1fr)repeat(8, 30px);
+    }
+  }
+  @media screen and (max-width: 720px) {
+    .salaContainer {
+      width: 100%;
+    }
+    .sala {
+      grid-template-rows: repeat(2, 1fr)repeat(8, 30px);
+    }
+  }
+  @media screen and (max-width: 660px) {
+    .sala {
+      width: 620px;
+      
+      grid-template-rows: repeat(2, 1fr)repeat(8, 30px);
+    }
+    .seats-container {
+      height: 450px;  
+      display: block;
+    }
+  }
+  @media screen and (max-width: 530px) {
+    .seats-container {
+      width: 100vw;
+    }
+    .espaciov1 {
+      width: 1vw;
+    }
+    .espaciov2 {
+      width: 1vw;
+    }
+  }
