--- a/src/Pages/Reserva/Reserva.css
+++ b/src/Pages/Reserva/Reserva.css
@@ -1,24 +1,23 @@
 .reservation-container {
     display: flex;
     box-sizing: border-box;
-    justify-content: space-between;
+    justify-content: flex-start;
+    align-content: flex-start;
     padding: 20px;
-    background-color: #021438;
+    padding-top: 60px;
     color: white;
     flex-wrap: wrap;
-
+    height: 100%;
+    width: 100%;
   }
   
   .seats-container {
     width: 100%;
+    height: fit-content;
     display: flex;
     justify-content: center;
-    align-items: center;  
+    align-items: flex-start;  
     overflow: auto;
-  }
-  
-  .info-container {
-    width: 100%;
   }
   .espacio {
     height: 70px;
@@ -100,40 +99,50 @@
     margin: 10px 0;
   }
   
+  .info-container {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 20px;
+    margin-top: 30px;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: #05101a;
+  }
   .info-container h2 {
     margin-bottom: 10px;
   }
+  .info-container p {
+    color: #b3cbe0;
+    margin: 0;
+    min-width: 220px;
+    max-width: 100%;
+    text-align: center;
+  }
   
   .add-to-order-btn {
-    background-color: #6feaf6;
+    background-color: rgb(27, 64, 99);
     border: none;
-    color: #021438;
+    color: #fff;
+    text-decoration: none;
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 20px;
+    transition: all 0.3s ease;
+  }
+  .add-to-order-btn:hover {
+    background-color: #063c83;
+    color: #fff;
+    transform: scale(1.05);
+  }
+  .add-to-order-btn:active {
+    transform: scale(0.95);
   }
   
-  .seat-types {
-    margin-top: 20px;
-  }
-  
-  .showcase {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .showcase li {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-  }
-  
-  .showcase .seat {
-    margin-right: 10px;
-  }
 
   
   .screen {
@@ -147,8 +156,11 @@
   }
     
   @media screen and (max-width: 1000px) {
+    .reservation-container {
+      padding-top: 60px;
+    }
     .salaContainer {
-      width: 80%;
+      width: 100%;
     }
     .sala {
       grid-template-rows: repeat(2, 1fr)repeat(8, 30px);
@@ -169,7 +181,7 @@
       grid-template-rows: repeat(2, 1fr)repeat(8, 30px);
     }
   }
-  @media screen and (max-width: 660px) {
+  @media screen and (max-width: 600px) {
     .sala {
       width: 620px;
       
