--- a/src/Pages/Reserva/Reserva.css
+++ b/src/Pages/Reserva/Reserva.css
@@ -10,6 +10,14 @@
     height: 100%;
     width: 100%;
   }
+  .messageSillas {
+    color: rgb(11, 43, 92);
+    font-size: 25px;
+    font-weight: bold;
+    grid-column-start: 1;
+    grid-column-end: -1;
+    grid-row-start: 5;
+  }
   
   .seats-container {
     width: 100%;
