Ajustes de responsividad

--- a/src/Components/Shared/BarraNavegacion/BarraNavegacion.css
+++ b/src/Components/Shared/BarraNavegacion/BarraNavegacion.css
@@ -242,3 +242,14 @@
         right: 15px;
     }
 }
+@media screen and (max-width: 260px) {
+    .BarraNav nav {
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 220px) {
+    .BarraNav {
+        padding: 0 5px 0 5px;
+    }
+}
