--- a/src/Pages/Orden/Orden.css
+++ b/src/Pages/Orden/Orden.css
@@ -1,3 +1,21 @@
+.loadingMiOrden {
+    text-align: center;
+    font-size: x-large;
+    font-weight: bold;
+    color: #001f47;
+}
+
+
+
+.loadingContainer {
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+
 .order-container {
     padding: 20px;
     max-width: 800px;
@@ -6,7 +24,14 @@
     border-radius: 10px; /* Bordes redondeados */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra para destacar */
 }
-
+.order-container h2 {
+    text-align: center;
+    color: #0f2f75;
+}
+.order-item-info h3 {
+    text-align: left;
+    color: #3d6292;
+}
 .order-item {
     display: flex;
     align-items: center;
@@ -23,6 +48,7 @@
     height: 100px;
     object-fit: cover;
     margin-right: 20px;
+    margin-left: 20px;
     border-radius: 10px; /* Bordes redondeados para la imagen */
 }
 
