--- a/src/Pages/Orden/Orden.css
+++ b/src/Pages/Orden/Orden.css
@@ -31,6 +31,7 @@
 .order-item-info h3 {
     text-align: left;
     color: #3d6292;
+    margin-bottom: 0px;
 }
 .order-item {
     display: flex;
@@ -48,7 +49,7 @@
     height: 100px;
     object-fit: cover;
     margin-right: 20px;
-    margin-left: 20px;
+    margin-left: 10px;
     border-radius: 10px; /* Bordes redondeados para la imagen */
 }
 
