--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -20,8 +20,11 @@
 
 .team-member-image {
     width: 100%;
-    height: auto;
+    height: 200px;
     border-radius: 50%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+
 }
 
 .team-member h2 {
